Nest input in form, main header in section and link main stylesheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BASE APPAREL</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -14,15 +15,19 @@
     </figure>
 
     <main>
-        <h1>
-            <span>We're</span> coming soon
-        </h1>
+        <section class="comingsoon-section">
+            <h1>
+                <span>We're</span> coming soon
+            </h1>
+        </section>
         <p>Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
-        <section>
-            <input type="text" placeholder="Email Address">
-            <button class="button_email-submit"><img src="images/icon-arrow.svg" alt="arrow" class="button_arrow"></button>
-        </section>
+        <form>
+            <input type="email" placeholder="Email Address">
+            <button class="button_email-submit">
+                <img src="images/icon-arrow.svg" alt="arrow" class="button_arrow">
+            </button>
+        </form>
     </main>
 </body>
 </html>
